--- a/app/src/main/res/layout/select_players.xml
+++ b/app/src/main/res/layout/select_players.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".MainActivity">
+    tools:context=".SelectPlayersActivity">
 
 
     <ImageView
@@ -20,27 +20,27 @@
         android:src="@drawable/selectplayers" />
 
     <Button
-        android:id="@+id/Player2Button"
+        android:id="@+id/player2Button"
         android:layout_width="137dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="133dp"
-        android:layout_marginRight="133dp"
-        android:layout_marginBottom="393dp"
+        android:layout_marginEnd="122dp"
+        android:layout_marginRight="122dp"
+        android:layout_marginBottom="282dp"
         android:text="2 player" />
 
     <Button
-        android:id="@+id/Player3Button"
+        android:id="@+id/player3Button"
         android:layout_width="135dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="139dp"
-        android:layout_marginLeft="139dp"
-        android:layout_marginBottom="325dp"
+        android:layout_marginStart="149dp"
+        android:layout_marginLeft="149dp"
+        android:layout_marginBottom="206dp"
         android:text="3 Players" />
 
     <Button
@@ -50,9 +50,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="138dp"
-        android:layout_marginLeft="138dp"
-        android:layout_marginBottom="257dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginLeft="148dp"
+        android:layout_marginBottom="134dp"
         android:text="4 Players" />
 
 </RelativeLayout>
