--- a/app/src/main/res/layout/story.xml
+++ b/app/src/main/res/layout/story.xml
@@ -14,9 +14,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="27dp"
-        android:layout_marginRight="27dp"
+        android:layout_marginTop="93dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginRight="22dp"
         android:textColor="#FFFFFF" />
 
 
@@ -69,5 +69,33 @@
         android:text=""
         android:textColor="#FFFFFF"
         />
+
+    <TextView
+        android:id="@+id/currentPlayerText"
+        android:layout_width="103dp"
+        android:layout_height="38dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="285dp"
+        android:layout_marginRight="285dp"
+        android:textColor="#FFFFFF"
+        android:textSize="18dp"
+        android:text="" />
+
+    <TextView
+        android:id="@+id/currentRoundText"
+        android:layout_width="111dp"
+        android:layout_height="42dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="194dp"
+        android:layout_marginLeft="194dp"
+        android:layout_marginTop="23dp"
+        android:text=""
+        android:textColor="#FFFFFF"
+        android:textSize="18dp" />
 
 </RelativeLayout>
