--- a/app/src/main/res/layout/leader_bord.xml
+++ b/app/src/main/res/layout/leader_bord.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#000000"
-    tools:context=".StartGameActivity">
+    tools:context=".LeaderBoardActivity">
 
 
     <Button
@@ -21,7 +21,7 @@
         android:text="Continue" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/gameoverranking" />
@@ -36,6 +36,8 @@
         android:layout_marginStart="67dp"
         android:layout_marginLeft="67dp"
         android:layout_marginBottom="173dp"
-        android:text="TextView" />
+        android:text=""
+        android:textColor="#FFFFFF"
+        android:textSize="24dp" />
 
 </RelativeLayout>
