--- a/app/src/main/res/layout/start_game.xml
+++ b/app/src/main/res/layout/start_game.xml
@@ -9,6 +9,7 @@
 
 
     <ImageView
+        android:id="@+id/img"
         android:layout_width="278dp"
         android:layout_height="145dp"
         android:layout_alignParentStart="true"
