--- a/app/src/main/res/layout/select_players.xml
+++ b/app/src/main/res/layout/select_players.xml
@@ -11,12 +11,12 @@
     <ImageView
         android:layout_width="278dp"
         android:layout_height="145dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="71dp"
-        android:layout_marginLeft="71dp"
-        android:layout_marginTop="83dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginBottom="400dp"
         android:src="@drawable/selectplayers" />
 
     <Button
@@ -26,33 +26,33 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="122dp"
-        android:layout_marginRight="122dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginRight="126dp"
         android:layout_marginBottom="282dp"
-        android:text="2 player" />
+        android:text="2 players" />
 
     <Button
         android:id="@+id/player3Button"
-        android:layout_width="135dp"
+        android:layout_width="137dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="149dp"
-        android:layout_marginLeft="149dp"
-        android:layout_marginBottom="206dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginRight="122dp"
+        android:layout_marginBottom="210dp"
         android:text="3 Players" />
 
     <Button
         android:id="@+id/player4Button"
-        android:layout_width="135dp"
+        android:layout_width="137dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="148dp"
-        android:layout_marginLeft="148dp"
-        android:layout_marginBottom="134dp"
+        android:layout_marginEnd="126dp"
+        android:layout_marginRight="126dp"
+        android:layout_marginBottom="139dp"
         android:text="4 Players" />
 
 </RelativeLayout>
